adding alternative names in imagetags

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -59,7 +59,7 @@ Best  HIFEM chair treatment hospital in kakinada,
 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
   <a class="navbar-brand ms-2" href="index.html">
-    <img src="assets/img/logo.png" alt="">
+    <img src="assets/img/logo.png" alt="logo">
   </a>
   <span class="slant-shadow">.</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@ Best  HIFEM chair treatment hospital in kakinada,
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link   ps-5 pe-5" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/menscilinicfinallogo.png" alt="">
+        <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
       </a>
      <span class="slant-shadow">.</span>
       <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
@@ -105,7 +105,7 @@ Best  HIFEM chair treatment hospital in kakinada,
 
   <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
     <a class="navbar-brand" href="index.html">
-      <img src="assets/img/logo.png" alt="">
+      <img src="assets/img/logo.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -156,7 +156,7 @@ Best  HIFEM chair treatment hospital in kakinada,
     <div class="container-fluid mb-5 mt-5">
         <!-- <div class="row">  -->
             <h3 class="pb-3">Exectile Dysfunction Procedure</h3>
-             <img src="assets/img/Exectile_Dysfunction_Procedure_aruna_couples_clinic.png" class="img-fluid" alt="">
+             <img src="assets/img/Exectile_Dysfunction_Procedure_aruna_couples_clinic.png" class="img-fluid" alt="Exectile_Dysfunction">
         <!-- </div> -->
     </div>
   </section>
@@ -182,7 +182,7 @@ Best  HIFEM chair treatment hospital in kakinada,
             </div>
             <div class="col-lg-6 col-sm-12 col-md-12 mt-5 pb-2">
                 <!-- <img src="assets/img/Erectile_Dysfunction4.png" class="img-fluid" alt=""> -->
-                <img src="assets/img/Focused_Extracorporeal_Shock_wave_Therapy_aruna_couples_clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/Focused_Extracorporeal_Shock_wave_Therapy_aruna_couples_clinic.png" class="img-fluid" alt="Focused_Extracorporeal">
 
              </div>
         </div>
@@ -196,7 +196,7 @@ Best  HIFEM chair treatment hospital in kakinada,
         <div class="row"> 
             <h3 class="pb-5">HIFEM Chair</h3>
             <div class="col-lg-6 col-sm-12 col-md-12 pb-2">
-                <img src="assets/img/best_HIFEM_Chair_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_HIFEM_Chair_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="HIFEM_Chair">
             </div>
             <div class="col-lg-6 col-sm-12 col-md-12 pb-2">
                <span>
@@ -238,7 +238,7 @@ Best  HIFEM chair treatment hospital in kakinada,
             </div>
             <div class="col-lg-6 col-sm-12 col-md-12 pb-2">
                 <!-- <img src="assets/img/Erectile_Dysfunction6.png" class="img-fluid" alt=""> -->
-                <img src="assets/img/best_P-Shot_treatment_aruna_couples_clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_P-Shot_treatment_aruna_couples_clinic.png" class="img-fluid" alt="P-Shot">
 
             </div>
         </div>
@@ -256,7 +256,7 @@ Best  HIFEM chair treatment hospital in kakinada,
           <div class="row">
             <!--  FIRSTBLOCK -->
             <div class="col-lg-5  col-sm-6 footer">
-              <img src="assets/img/Group 5 (1).png" alt="">
+              <img src="assets/img/Group 5 (1).png" alt="group">
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row">
                 <div class="col-1">
