--- a/appointment.html
+++ b/appointment.html
@@ -47,7 +47,7 @@
 <header > 
   <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow  p-0">
     <a class="navbar-brand ms-5" href="index.html">
-      <img src="assets/img/logo.png" alt="">
+      <img src="assets/img/logo.png" alt="logo">
     </a>
     <span class="slant-shadow">.</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,12 +57,12 @@
       <div class="navbar-nav ml-auto justify-content-between">
         <a class="nav-item nav-link ms-5 ps-5 pe-5" href="male.html" id="navlink2">
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <img src="assets/img/menscilinicfinallogo.png" alt="">
+          <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
         </a>
         <span class="slant-shadow">.</span>
         <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
           <div class="d-flex align-items-center">
-            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phone">
             <h5 class="ml-2">&nbsp;+7997990181</h5>
           </div>
         </a>
@@ -82,7 +82,7 @@
   
   <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
     <a class="navbar-brand" href="index.html">
-      <img src="assets/img/logo.png" alt="">
+      <img src="assets/img/logo.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -91,12 +91,12 @@
       <div class="navbar-nav ml-auto justify-content-between">
         <a class="nav-item nav-link" href="male.html" id="navlink2">
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <img src="assets/img/menscilinicfinallogo.png" alt="">
+          <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
   
         </a>
         <a class="nav-item nav-link" href="#" id="navlink2" style="margin-top: -3%;">
           <div class="d-flex align-items-center">
-            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phone">
             <h5 class="ml-2">&nbsp;+7997990181</h5>
           </div>
         </a>
@@ -118,7 +118,7 @@
             <div class="row"> 
                 <div class="col-lg-6  col-sm-12 col-md-12  mt-5 pt-5 mainsectionimage">
                      <!-- <img src="assets/img/appointment.png" alt="" height="auto" width="auto"> -->
-                     <img src="assets/img/appointment_for_couples_clinic_aruna_couples_clinic.png" class="img-fluid mt-3" alt="">
+                     <img src="assets/img/appointment_for_couples_clinic_aruna_couples_clinic.png" class="img-fluid mt-3" alt="couples_clinic">
                 </div>
                 <div class="col-lg-6 col-sm-12 col-md-12">
                     <h1 class="mt-4 ms-5 pt-2">Make An appointment</h1>
