--- a/command.html
+++ b/command.html
@@ -29,7 +29,7 @@ navbar home the main page navbar -->
 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
     <a class="navbar-brand" href="#">
-      <img src="assets/img/logo.png" alt="">
+      <img src="assets/img/logo.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -37,11 +37,11 @@ navbar home the main page navbar -->
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto justify-content-between">
         <a class="nav-item nav-link ms-5 ps-5 pe-5" href="#" id="navlink2">
-          <img src="assets/img/logo.png" alt="">
+          <img src="assets/img/logo.png" alt="logo">
         </a>
         <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
           <div class="d-flex align-items-center">
-            <img src="assets/img/phone.svg" alt="">
+            <img src="assets/img/phone.svg" alt="phone">
             <h5 class="ml-2">+79979901881</h5>
           </div>
         </a>
@@ -61,7 +61,7 @@ navbar home the main page navbar -->
       <div class="row">
          <!-- FOUNDERS FIRST PART -->
         <div class="col-lg-3  col-sm-6 col-md-6 d-flex">
-          <img src="assets/img/Group.svg" alt="">
+          <img src="assets/img/Group.svg" alt="group">
           <div class="ps-4 pe-1" style="border-right:1px solid #000;">
             <h1>22</h1>
             <h6>Founders</h6>
@@ -69,7 +69,7 @@ navbar home the main page navbar -->
         </div>
          <!-- FOUNDERS SECOND PART -->
         <div class="col-lg-3  col-sm-6 col-md-6 d-flex">
-            <img src="assets/img/Group (1).svg" alt="">
+            <img src="assets/img/Group (1).svg" alt="group">
           <div class="col-9" style="border-right:1px solid #000;">
             <h1>567+</h1>
             <h6>Happy Patients</h6>
@@ -77,7 +77,7 @@ navbar home the main page navbar -->
         </div>
          <!-- FOUNDERS THIRD PART -->
         <div class="col-lg-3  col-sm-6 col-md-6 ps-4 d-flex">
-            <img src="assets/img/Group (2).svg" alt="">
+            <img src="assets/img/Group (2).svg" alt="group">
           <div class="col-9" style="border-right:1px solid #000;">
             <h1>48</h1>
             <h6>Number of staffs</h6>
@@ -86,7 +86,7 @@ navbar home the main page navbar -->
          <!-- FOUNDERS FOURTH  PART -->
         <div class="col-lg-3 col-sm-6 col-md-6 d-flex">
           <div class="col-3"> 
-            <img src="assets/img/Group (3).svg" alt="">
+            <img src="assets/img/Group (3).svg" alt="group">
           </div>
           <div class="col-9">
             <h1>26</h1>
@@ -312,7 +312,7 @@ navbar home the main page navbar -->
             <div id="additionalContent1" style="display: none;">
               <!-- Additional content for the first accordion -->
               <h1 class="text-center mb-3">Female Non Surgical</h1>
-              <img src="assets/img/vaginalimg1.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/vaginalimg1.png" alt="vaginalimg1" class="img-fluid mb-4">
               <h6>At Aruna Hospital Couple Clinics, we understand that every woman is unique, and so are her beauty goals. Step into a world where we celebrate your individuality and offer a range of non-surgical treatments tailored to enhance your natural radiance.</h6>
               <!-- ... Your content ... -->
               <div class="nomore text-center mt-3"> 
@@ -323,7 +323,7 @@ navbar home the main page navbar -->
             <div id="additionalContent2" style="display: none;">
               <!-- Additional content for the second accordion -->
               <h1 class="text-center mb-3">Female Surgical</h1>
-              <img src="assets/img/vaginalimg2.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/vaginalimg2.png" alt="vaginalimg2" class="img-fluid mb-4">
               <h6>At Aruna Hospital Couple Clinics, we understand the importance of surgical excellence in achieving transformative and lasting results. Step into a realm where our skilled surgeons combine artistry with precision to enhance your beauty through surgical treatments tailored to your unique desires.</h6>
               <!-- ... Your content ... -->
               <div class="nomore text-center mt-3"> 
@@ -334,7 +334,7 @@ navbar home the main page navbar -->
             <div id="additionalContent3" style="display: none;">
               <!-- Additional content for the third accordion -->
               <h1 class="text-center mb-3">Male</h1>
-              <img src="assets/img/vaginalimg3.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/vaginalimg3.png" alt="vaginalimg3" class="img-fluid mb-4">
               <h6>At Aruna Hospital, where we prioritize the health and well-being of every individual. Our commitment extends to providing specialized and comprehensive treatments designed specifically for men.</h6>
               <!-- ... Your content ... -->
               <div class="nomore text-center mt-3"> 
@@ -345,7 +345,7 @@ navbar home the main page navbar -->
             <div id="additionalContent4" style="display: none;">
               <!-- Additional content for the fourth accordion -->
               <h1 class="mb-3">Erectile Dysfunction Procedure</h1>
-              <img src="assets/img/vaginalimg4.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/vaginalimg4.png" alt="vaginalimg4" class="img-fluid mb-4">
               <h6>At Aruna Hospital, we pride ourselves on offering cutting-edge medical care supported by advanced equipment. Our state-of-the-art facilities include diagnostic tools like MRI and CT scanners, ensuring precise and comprehensive imaging. From high-tech surgical instruments to modern patient monitoring systems, we are committed to providing the best in healthcare. Our investment in advanced equipment reflects our dedication to delivering accurate diagnoses, effective treatments, and compassionate care.</h6>
               <!-- ... Your content ... -->
               <div class="nomore text-center mt-3"> 
