--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -88,7 +88,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
   <a class="navbar-brand ms-2" href="index.html">
-    <img src="assets/img/logo.png" alt="">
+    <img src="assets/img/logo.png" alt="logo">
   </a>
   <span class="slant-shadow">.</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -98,12 +98,12 @@
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link   ps-5 pe-5" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/menscilinicfinallogo.png" alt="">
+        <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
       </a>
      <span class="slant-shadow">.</span>
       <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
         <div class="d-flex align-items-center">
-          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phone">
           <h5 class="ml-2">&nbsp;+7997990181</h5>
         </div>
       </a>
@@ -134,7 +134,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="index.html">
-    <img src="assets/img/logo.png" alt="">
+    <img src="assets/img/logo.png" alt="logo">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -186,7 +186,7 @@
             <h3 class="pb-3">FEMALE NON SURGICAL</h3>
             <!-- <div class="col-lg-6 col-md-12 col-sm-12">
             </div> -->
-            <img src="assets/img/best_female_non_sugrical_tearament_in_kakinada_aruna-couples_clinic.png"  class="img-fluid">
+            <img src="assets/img/best_female_non_sugrical_tearament_in_kakinada_aruna-couples_clinic.png" alt="female_non_sugrical_tearament" class="img-fluid">
         </div>
     </div>
 </section>
@@ -199,7 +199,7 @@
         <div class="row"> 
             <h3 class="pb-3">VAGINAL REJUVENATION</h3>
             <div class="col-lg-6 col-md-12 col-sm-12 pt-4 pb-2">
-               <img src="assets/img/beat_vaginal_rejuvenation_treatment_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="">
+               <img src="assets/img/beat_vaginal_rejuvenation_treatment_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="vaginal_rejuvenation_treatment">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 p-3 pb-2">
              <span >Vaginal Rejuvenation at Aruna Hospital Couple Clinics: Boost your       confidence and well-being. <br>
@@ -233,7 +233,7 @@
              </span>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 ps-5 pb-2">
-                <img src="assets/img/best_URINARY_INCONTINENCE_treatment_aruna_couples_clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_URINARY_INCONTINENCE_treatment_aruna_couples_clinic.png" class="img-fluid" alt="URINARY_INCONTINENCE_treatment">
             </div>
         </div>
     </div>
@@ -247,7 +247,7 @@
             <h3 class="pb-3" >VAGINAL DRYNESS AND INFECTION </h3>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <!-- <img src="assets/img/3.png" class="img-fluid" alt=""> -->
-                <img src="assets/img/best_treatment_for_VAGINAL_DRYNESS_AND_INFECTION_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_treatment_for_VAGINAL_DRYNESS_AND_INFECTION_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="VAGINAL_DRYNESS_AND_INFECTION">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
              <span>
@@ -286,7 +286,7 @@
              </span>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_treatment_for_VAGINAL_discharge_in_kakinada_aruna_couples_clinic.png"  class="img-fluid" alt="">
+                <img src="assets/img/best_treatment_for_VAGINAL_discharge_in_kakinada_aruna_couples_clinic.png"  class="img-fluid" alt="VAGINAL_discharge">
             </div>
         </div>
     </div>
@@ -302,7 +302,7 @@
             <h3 class="pb-3">POST DELIVERY REHABILITATION</h3>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <!-- <img src="assets/img/5.png"  class="img-fluid" alt=""> -->
-                <img src="assets/img/best_post_delivery_treatment_in_kakinada_arna_hospital.png"  class="img-fluid" alt="">
+                <img src="assets/img/best_post_delivery_treatment_in_kakinada_arna_hospital.png"  class="img-fluid" alt="post_delivery_treatment">
 
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
@@ -343,7 +343,7 @@
              </span>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_g-shot_treatment_in_kakinada_aruna_cuples_clinic.png"  class="img-fluid" alt="">
+                <img src="assets/img/best_g-shot_treatment_in_kakinada_aruna_cuples_clinic.png"  class="img-fluid" alt="g-shot">
             </div>
         </div>
     </div>
@@ -358,7 +358,7 @@
         <div class="row"> 
             <h3 class="pb-3">O-SHOT </h3>
             <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-                <img src="assets/img/best_o-shot_treatment_service_in_kakinada_aruna_cuples_clinic.png" class="img-fluid"  alt="">
+                <img src="assets/img/best_o-shot_treatment_service_in_kakinada_aruna_cuples_clinic.png" class="img-fluid"  alt="o-shot">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
              <span>
@@ -395,7 +395,7 @@
            </span>
           </div>
            <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-              <img src="assets/img/best_female_sexual_dysfunction_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+              <img src="assets/img/best_female_sexual_dysfunction_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="female_sexual_dysfunction">
           </div>
       </div>
   </div>
@@ -411,7 +411,7 @@
       <div class="row"> 
           <h3 class="pb-3"> LASER HAIR REDUCTION </h3>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-              <img src="assets/img/best_laser_hair_reduction_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+              <img src="assets/img/best_laser_hair_reduction_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="laser_hair_reduction">
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
            <span>
@@ -442,7 +442,7 @@
            </span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_bikini_laser_hair_removal_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_bikini_laser_hair_removal_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="bikini_laser_hair">
         </div>
       </div>
   </div>
@@ -457,7 +457,7 @@
       <div class="row"> 
           <h3 class="pb-3">VULVA HAIR REDUCTION</h3>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-              <img src="assets/img/best_vulva_hair_reduction_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+              <img src="assets/img/best_vulva_hair_reduction_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="vulva_hair">
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
            <span>
@@ -513,7 +513,7 @@
            </span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_strech_mark_management_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_strech_mark_management_aruna_couples_clinic.png" class="img-fluid"  alt="strech_mark_management">
         </div>
       </div>
   </div>
@@ -528,7 +528,7 @@
       <div class="row"> 
           <h3 class="pb-3">BREAST SAGGING</h3>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_breast_sagging_treatment_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_breast_sagging_treatment_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="breast_sagging_treatment">
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
            <span>
@@ -564,7 +564,7 @@
            </span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_facial_rejuventation_service_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_facial_rejuventation_service_aruna_couples_clinic.png" class="img-fluid"  alt="facial_rejuventation">
         </div>
       </div>
   </div>
@@ -603,7 +603,7 @@
       <div class="row"> 
           <h3 class="pb-3">HAIR LOSS TREATMENTS</h3>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-              <img src="assets/img/best_hair_loss_treatment_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+              <img src="assets/img/best_hair_loss_treatment_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="hair_loss_treatment">
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
            <span>
@@ -633,7 +633,7 @@
            </span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_prp_service_in_kakinada_aruna_coupls_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_prp_service_in_kakinada_aruna_coupls_clinic.png" class="img-fluid"  alt="prp_service">
           </div>
       </div>
   </div>
@@ -649,7 +649,7 @@
       <div class="row"> 
           <h3 class="pb-3">MOMMY MAKE OVER</h3>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_mommy_make_over_treatment_in_kakinada_aruna-couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_mommy_make_over_treatment_in_kakinada_aruna-couples_clinic.png" class="img-fluid"  alt="mommy_make_over">
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
            <span>
@@ -679,7 +679,7 @@
            </span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_under_arm_peels_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_under_arm_peels_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="under_arm_peels">
         </div>
       </div>
   </div>
@@ -717,7 +717,7 @@
       <div class="row"> 
           <h3 class="pb-3">HOLLYWOOD FACIAL</h3>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_hollywood_facial_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_hollywood_facial_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="hollywood_facial_service">
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
            <span>
@@ -746,7 +746,7 @@
            </span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_medi_facials_services_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_medi_facials_services_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="medi_facials">
           </div>
           
       </div>
@@ -763,7 +763,7 @@
       <div class="row"> 
           <h3 class="pb-3">HAND AND FEET REJUVENATION</h3>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_hand_and_feet_rejuvenation_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_hand_and_feet_rejuvenation_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="hand_and_feet_rejuvenation">
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
            <span>
@@ -793,7 +793,7 @@
            </span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_tatto_removel_service_in_kakinada_aruna_hospital.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_tatto_removel_service_in_kakinada_aruna_hospital.png" class="img-fluid"  alt="tatto_removel">
           </div>
       </div>
   </div>
@@ -809,7 +809,7 @@
       <div class="row"> 
           <h3 class="pb-3">MENOPAUSE</h3>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_meno_pause_service_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_meno_pause_service_aruna_couples_clinic.png" class="img-fluid"  alt="meno_pause">
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
            <span>
@@ -840,7 +840,7 @@
            </span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 pt-2 pb-2">
-            <img src="assets/img/best_SCARS_MANAGEMENT_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+            <img src="assets/img/best_SCARS_MANAGEMENT_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="SCARS_MANAGEMENT">
           </div>
       </div>
   </div>
@@ -858,7 +858,7 @@
           <div class="row">
             <!--  FIRSTBLOCK -->
             <div class="col-lg-5  col-sm-6 footer">
-              <img src="assets/img/Group 5 (1).png" alt="">
+              <img src="assets/img/Group 5 (1).png" alt="group">
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row">
                 <div class="col-1">
