--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -18,17 +18,17 @@
   Best cosmetic gynecologist in kakinada,
   Best cosmetic gynecology doctor in kakinada,
   Best Hymenoplasty treatment in kakinada,
-    Best  labiaplasty treatment in kakinada,
-    Best clitoral hood reduction treatment in kakinada,
-    Best clitoral unhooding treatment in kakinada,
-    Best clitoral unhooding surgery hospital in kakinada,
-    Best monsplasty treatment in kakinada,
-    Best monsplasty surgery hospital in kakinada,
-    Best female beauty care hospital in kakinada,
-    Best female beauty treatment in kakinada ,
-    Best female sex specialist in kakinada ,
-    Best ladies doctor in kakinada,
-    Best female private parts specialist in kakinada,
+  Best  labiaplasty treatment in kakinada,
+  Best clitoral hood reduction treatment in kakinada,
+  Best clitoral unhooding treatment in kakinada,
+  Best clitoral unhooding surgery hospital in kakinada,
+  Best monsplasty treatment in kakinada,
+  Best monsplasty surgery hospital in kakinada,
+  Best female beauty care hospital in kakinada,
+  Best female beauty treatment in kakinada ,
+  Best female sex specialist in kakinada ,
+  Best ladies doctor in kakinada,
+  Best female private parts specialist in kakinada,
   Best female private parts treatment in kakinada,
   Best female private parts doctor in kakinada,
 
@@ -68,7 +68,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
   <a class="navbar-brand ms-2" href="index.html">
-    <img src="assets/img/logo.png" alt="">
+    <img src="assets/img/logo.png" alt="logo">
   </a>
   <span class="slant-shadow">.</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,12 +78,12 @@
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link   ps-5 pe-5" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/menscilinicfinallogo.png" alt="">
+        <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
       </a>
      <span class="slant-shadow">.</span>
       <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
         <div class="d-flex align-items-center">
-          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phone">
           <h5 class="ml-2">&nbsp;+7997990181</h5>
         </div>
       </a>
@@ -114,7 +114,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
     <a class="navbar-brand" href="index.html">
-      <img src="assets/img/logo.png" alt="">
+      <img src="assets/img/logo.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -165,7 +165,7 @@
     <div class="container-fluid mb-5 mt-5">
         <div class="row"> 
             <h3 class="pb-3">FEMALE  SURGICAL</h3>
-              <img src="assets/img/best_female_surgical_treatment_aruna_couples_clinic.png"  class="img-fluid"  alt="">
+              <img src="assets/img/best_female_surgical_treatment_aruna_couples_clinic.png"  class="img-fluid"  alt="female_surgical">
         </div>
     </div>
 </section>
@@ -178,7 +178,7 @@
         <div class="row"> 
             <h3 class="pb-3">HYMENOPLASTY</h3>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_HYMENOPLASTY_service_aruna_couples_clinic.png" class="img-fluid"  alt="">
+                <img src="assets/img/best_HYMENOPLASTY_service_aruna_couples_clinic.png" class="img-fluid"  alt="HYMENOPLASTY_service">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12  pb-2">
                 <span>
@@ -215,7 +215,7 @@
                 </span>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_LABIOMINORAPLASTY_service_aruna_couples_clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_LABIOMINORAPLASTY_service_aruna_couples_clinic.png" class="img-fluid" alt="best_LABIOMINORAPLASTY">
             </div>
         </div>
     </div>
@@ -230,7 +230,7 @@
         <div class="row"> 
             <h3 class="pb-3">LABIOMAJORAPLASTY </h3>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_LABIOMINORAPLASTY_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_LABIOMINORAPLASTY_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="best_LABIOMINORAPLASTY_service">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <span>
@@ -266,7 +266,7 @@
                 </span>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_clitoral_hood_reduction_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_clitoral_hood_reduction_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="clitoral_hood_reduction_service">
             </div>
         </div>
     </div>
@@ -281,7 +281,7 @@
         <div class="row"> 
             <h3 class="pb-3">CLITORAL UNHOODING </h3>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_clitoral_unhooding_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="">
+                <img src="assets/img/best_clitoral_unhooding_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid"  alt="clitoral_unhooding_service">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
              <span>
@@ -319,7 +319,7 @@
                 </span>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_monsplasty_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_monsplasty_service_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="monsplasty_service">
             </div>
         </div>
     </div>
@@ -337,7 +337,7 @@
           <div class="row">
             <!--  FIRSTBLOCK -->
             <div class="col-lg-5  col-sm-6 footer">
-              <img src="assets/img/Group 5 (1).png" alt="">
+              <img src="assets/img/Group 5 (1).png" alt="group">
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row">
                 <div class="col-1">
