--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <header id="main_img">
     <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow  p-0">
       <a class="navbar-brand ms-5" href="index.html">
-        <img src="assets/img/logo.png" alt="">
+        <img src="assets/img/logo.png" alt="image_logo">
       </a>
       <span class="slant-shadow">.</span>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -167,12 +167,12 @@
         <div class="navbar-nav ml-auto justify-content-between">
           <a class="nav-item nav-link ms-5 ps-5 pe-5" href="male.html" id="navlink2">
             <!-- <img src="assets/img/logo.png" alt=""> -->
-            <img src="assets/img/menscilinicfinallogo.png" alt="">
+            <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
           </a>
           <span class="slant-shadow">.</span>
           <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
             <div class="d-flex align-items-center">
-              <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+              <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phonesvg">
               <h5 class="ml-2">&nbsp;+7997990181</h5>
             </div>
 
@@ -195,12 +195,12 @@
     <div class="row">
       <div class="col-4 mt-2">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/img/logo.png" alt="" height="60" width="130">
+          <img src="assets/img/logo.png" alt="logo" height="60" width="130">
         </a>
       </div>
       <div class="col-4 mt-2 ps-4">
         <a class="nav-item nav-link" href="male.html" id="navlink2">
-          <img src="assets/img/menscilinicfinallogo.png" alt="" height="60" width="150">
+          <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic" height="60" width="150">
         </a>
       </div>
       <div class="col-4">
@@ -261,22 +261,22 @@
                 <img src="assets/img/facebook.png" alt="Facebook">
               </a>
               <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank">
-                <img src="assets/img/icons8-youtube-48.png" alt="">
+                <img src="assets/img/icons8-youtube-48.png" alt="youtube">
               </a>
               <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/" target="_blank">
-                <img src="assets/img/icons8-instagram-48.png" alt="">
+                <img src="assets/img/icons8-instagram-48.png" alt="instagram">
               </a>
               <a href="https://in.pinterest.com/arunahospitalkakinada2023/" target="_blank">
-                <img src="assets/img/pinterest.png" alt="">
+                <img src="assets/img/pinterest.png" alt="pinterest">
               </a>
               <a href="https://twitter.com/HospitalAr11055" target="_blank">
-                <img src="assets/img/twitter.png" alt="">
+                <img src="assets/img/twitter.png" alt="twitter">
               </a>
               <a href="https://www.linkedin.com/in/aruna-cople-clinic/" target="_blank">
-                <img src="assets/img/linked.png" alt="">
+                <img src="assets/img/linked.png" alt="linkedin">
               </a>
               <a href="mailto:arunahospital.999@gmail.com" target="_blank" rel="noopener noreferrer">
-                <img src="assets/img/gmail.png" alt="">
+                <img src="assets/img/gmail.png" alt="gmail">
               </a>
 
             </a>
@@ -308,32 +308,32 @@
     <div class="side-btn-div">
       <div class="col-lg-3 mt-3">
         <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank">
-          <img src="assets/img/icons8-youtube-48.png" alt="">
+          <img src="assets/img/icons8-youtube-48.png" alt="youtube">
         </a>
       </div>
       <div class="col-lg-3 mt-3">
         <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/" target="_blank">
-          <img src="assets/img/icons8-instagram-48.png" alt="">
+          <img src="assets/img/icons8-instagram-48.png" alt="instagram">
         </a>
       </div>
       <div class="col-lg-3 mt-3">
         <a href="https://in.pinterest.com/arunahospitalkakinada2023/" target="_blank">
-          <img src="assets/img/pinterest.png" alt="">
+          <img src="assets/img/pinterest.png" alt="pinterest">
         </a>
       </div>
       <div class="col-lg-3 mt-3">
         <a href="https://twitter.com/HospitalAr11055" target="_blank">
-          <img src="assets/img/twitter.png" alt="">
+          <img src="assets/img/twitter.png" alt="twitter">
         </a>
       </div>
       <div class="col-lg-3 mt-3">
         <a href="https://www.linkedin.com/in/aruna-cople-clinic/" target="_blank">
-          <img src="assets/img/linked.png" alt="">
+          <img src="assets/img/linked.png" alt="linked">
         </a>
       </div>
       <div class="col-lg-3 mt-3">
         <a href="mailto:arunahospital.999@gmail.com" target="_blank" rel="noopener noreferrer">
-          <img src="assets/img/gmail.png" alt="">
+          <img src="assets/img/gmail.png" alt="gmail">
         </a>
       </div>
 
@@ -363,7 +363,7 @@
                   </div>
                   <div class="col-lg-6 col-sm-6 col-md-12">
                     <!-- <img src="assets/img/image1.png" alt="" height="auto" class="img-fluid" width="auto"> -->
-                    <img src="assets/img/best_couples_clinic_in_kakinada_aruna_couples_clinic.png" alt="" height="auto" class="img-fluid" width="auto">
+                    <img src="assets/img/best_couples_clinic_in_kakinada_aruna_couples_clinic.png" alt="couples_clinic" height="auto" class="img-fluid" width="auto">
                   </div>
                 </div>
               </div>
@@ -413,7 +413,7 @@
           </div>
           <div class="col-4 ms-3 mb-1" id="fulfilinglovenavbarpartsearch">
             <!-- <img src="assets/img/search (2).png" alt="" height="80%" width="50%"> -->
-            <img src="assets/img/searchicon.png" alt="">
+            <img src="assets/img/searchicon.png" alt="searchicon">
             </a>
           </div>
         </div>
@@ -429,7 +429,7 @@
       <div class="row">
         <div class="col-lg-6 col-sm-12 col-md-12">
           <!-- <img src="assets/img/image2.png" class="img-fluid" alt=""> -->
-          <img src="assets/img/Best_Cosmetic_Gynecology_aruna_couples_clinic.png" class="img-fluid" alt="">
+          <img src="assets/img/Best_Cosmetic_Gynecology_aruna_couples_clinic.png" class="img-fluid" alt="gynecological">
 
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12 p-5 mt-5">
@@ -462,7 +462,7 @@
             <div class="service-div col-12 col-md-4">
               <div class="card ">
                 <div class="card-body ourservicesfirstcard">
-                  <img src="assets/img/card1.png" class="img-fluid" alt="">
+                  <img src="assets/img/card1.png" class="img-fluid" alt="card">
                   <h5 class="card-title">Aesthetic Gynecology</h5>
                   <p class="card-text pb-2">Our clinic specializes in aesthetic gynecology treatments to improve
                     intimate
@@ -476,7 +476,7 @@
             <div class="service-div col-12 col-md-4">
               <div class="card ">
                 <div class="card-body ourservicessecondcard">
-                  <img src="assets/img/card3.png" alt="">
+                  <img src="assets/img/card3.png" alt="card3">
                   <h5 class="card-title">Experienced Team </h5>
                   <p class="card-text pb-5 mb-5">Our highly trained and compassionate team of gynecologists and plastic
                     surgeons have years of experience providing safe and effective procedures.</p>
@@ -488,7 +488,7 @@
             <div class="service-div col-12 col-md-4">
               <div class="card ">
                 <div class="card-body ourservicesthirdcard p-5">
-                  <img src="assets/img/card2.png" alt="">
+                  <img src="assets/img/card2.png" alt="card2">
                   <h5 class="card-title">State-of-the-art-Technology</h5>
                   <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology and
                     equipment to ensure comfort and satisfaction during your treatment.</p>
@@ -504,7 +504,7 @@
             <div class="service-div col-12 col-md-4">
               <div class="card ">
                 <div class="card-body ourservicesfirstcard">
-                  <img src="assets/img/card2.png" alt="">
+                  <img src="assets/img/card2.png" alt="card2">
                   <h5 class="card-title">Pleasent Environment</h5>
                   <p class="card-text"> We understand the delicate nature of cosmetic gynecological procedures and our
                     clinic offers a warm, friendly and discreet environment in which you can feel comfortable.
@@ -517,7 +517,7 @@
             <div class="service-div col-12 col-md-4">
               <div class="card ">
                 <div class="card-body ourservicessecondcard">
-                  <img src="assets/img/card2.png" alt="">
+                  <img src="assets/img/card2.png" alt="card2">
                   <h5 class="card-title">Personal support</h5>
                   <p class="card-text">TYour goals and concerns are our top priority. We take the time to understand
                     your
@@ -532,7 +532,7 @@
             <div class="service-div col-12 col-md-4">
               <div class="card ">
                 <div class="card-body ourservicesthirdcard">
-                  <img src="assets/img/card2.png" alt="">
+                  <img src="assets/img/card2.png" alt="card2">
                   <h5 class="card-title">State-of-the-art-Technology</h5>
                   <p class="card-text">The Couples Clinic at Aruna Hospital is equipped with the latest technology and
                     equipment to ensure comfort and satisfaction during your treatment.</p>
@@ -614,7 +614,7 @@
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12">
           <!-- <img src="assets/img/image3.png" class="img-fluid" alt=""> -->
-          <img src="assets/img/leading_cosmetic_gynecology_hospital_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="">
+          <img src="assets/img/leading_cosmetic_gynecology_hospital_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="cosmetic_gynecology">
         </div>
       </div>
     </div>
@@ -773,13 +773,13 @@
             </div> -->
 
             <div id="videoContent" style="display: block;">
-              <video src="assets/img/home_video.mp4" width="100%" autoplay loop muted></video>
+              <video src="assets/img/home_video.mp4" width="100%"  autoplay loop muted></video>
             </div>
 
             <div id="additionalContent1" style="display: none;">
               <!-- Additional content for the first accordion -->
               <h1 class="text-center mb-3">Female Non Surgical</h1>
-              <img src="assets/img/best_non-surgical_treatment_hospital_aruna_couples_clinic.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/best_non-surgical_treatment_hospital_aruna_couples_clinic.png" alt="non_surgical" class="img-fluid mb-4">
               <h6>At Aruna Hospital Couple Clinics, we understand that every woman is unique, and so are her beauty
                 goals. Step into a world where we celebrate your individuality and offer a range of non-surgical
                 treatments tailored to enhance your natural radiance.</h6>
@@ -792,7 +792,7 @@
             <div id="additionalContent2" style="display: none;">
               <!-- Additional content for the second accordion -->
               <h1 class="text-center mb-3">Female Surgical</h1>
-              <img src="assets/img/best_surgical_treatment_in_kakinada_aruna_couples_clinic.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/best_surgical_treatment_in_kakinada_aruna_couples_clinic.png" alt="surgical_treatment" class="img-fluid mb-4">
               <h6>At Aruna Hospital Couple Clinics, we understand the importance of surgical excellence in achieving
                 transformative and lasting results. Step into a realm where our skilled surgeons combine artistry with
                 precision to enhance your beauty through surgical treatments tailored to your unique desires.</h6>
@@ -805,7 +805,7 @@
             <div id="additionalContent3" style="display: none;">
               <!-- Additional content for the third accordion -->
               <h1 class="text-center mb-3">Male</h1>
-              <img src="assets/img/best_male_treatment_in_kakinada_aruna_couples_clinic.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/best_male_treatment_in_kakinada_aruna_couples_clinic.png" alt="male_treatment" class="img-fluid mb-4">
               <h6>At Aruna Hospital, where we prioritize the health and well-being of every individual. Our commitment
                 extends to providing specialized and comprehensive treatments designed specifically for men.</h6>
               <!-- ... Your content ... -->
@@ -819,7 +819,7 @@
               <div class="smallandmedium">
                 <h3 class="mb-3">Erectile Dysfunction Procedure</h3>
               </div>
-              <img src="assets/img/best_Erectile_Dysfunction_Procedure_in_kakinada_aruna_couples_clinic.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/best_Erectile_Dysfunction_Procedure_in_kakinada_aruna_couples_clinic.png" alt="Erectile_Dysfunction_Procedure" class="img-fluid mb-4">
               <h6>At Aruna Hospital, we pride ourselves on offering cutting-edge medical care supported by advanced
                 equipment. Our state-of-the-art facilities include diagnostic tools like MRI and CT scanners, ensuring
                 precise and comprehensive imaging. From high-tech surgical instruments to modern patient monitoring
@@ -991,7 +991,7 @@
           <div class="row">
             <!--  FIRSTBLOCK -->
             <div class="col-lg-5  col-sm-6 footer">
-              <img src="assets/img/Group 5 (1).png" alt="">
+              <img src="assets/img/Group 5 (1).png" alt="group">
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row">
                 <div class="col-1">
