--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
 <header> 
   <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow  p-0">
     <a class="navbar-brand ms-5" href="index.html">
-      <img src="assets/img/logo.png" alt="">
+      <img src="assets/img/logo.png" alt="logo">
     </a>
     <span class="slant-shadow">.</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,12 +56,12 @@
       <div class="navbar-nav ml-auto justify-content-between">
         <a class="nav-item nav-link ms-5 ps-5 pe-5" href="male.html" id="navlink2">
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <img src="assets/img/menscilinicfinallogo.png" alt="">
+          <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
         </a>
         <span class="slant-shadow">.</span>
         <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
           <div class="d-flex align-items-center">
-            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phone">
             <h5 class="ml-2">&nbsp;+7997990181</h5>
           </div>
         </a>
@@ -80,7 +80,7 @@
 <!-- Header Small and medium Screen only  -->
 <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow" >
   <a class="navbar-brand" href="index.html">
-    <img src="assets/img/logo.png" alt="">
+    <img src="assets/img/logo.png" alt="logo">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -89,12 +89,12 @@
     <div class="ps-2 ml-auto justify-content-between">
       <a class="nav-item nav-link" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/menscilinicfinallogo.png" alt="">
+        <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
 
       </a>
       <a class="nav-item nav-link" href="#" id="navlink2">
         <div class="d-flex align-items-center">
-          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phone">
           <h5 class="ml-2">&nbsp;+7997990181</h5>
         </div>
       </a>          
@@ -121,13 +121,13 @@
             <div class=" container firstpart mb-5">
                 <div class="row"> 
                     <div class="col-lg-4 col-sm-12 col-md-12">
-                      <img src="assets/img/happy__pongal_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
+                      <img src="assets/img/happy__pongal_Aruna_Couples_Clinic.png"  class="img-fluid" alt="pongal-aruna-couples">
                     </div>
                     <div class="col-lg-4 col-sm-12 col-md-12">
-                      <img src="assets/img/Happy_bhogi_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
+                      <img src="assets/img/Happy_bhogi_Aruna_Couples_Clinic.png"  class="img-fluid" alt="bhogi_Aruna_Couples">
                     </div>
                     <div class="col-lg-4 col-sm-12 col-md-12">
-                      <img src="assets/img/happy_christmas_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
+                      <img src="assets/img/happy_christmas_Aruna_Couples_Clinic.png"  class="img-fluid" alt="christmas_Aruna_Couples">
                     </div>
                 </div>
             </div> 
@@ -136,15 +136,15 @@
               <div class="row"> 
                   <div class="col-lg-4 col-sm-12 col-md-12">
                     <!-- <img src="assets/img/gallery2.jpg"  class="img-fluid" alt=""> -->
-                    <img src="assets/img/happy_new_year_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
+                    <img src="assets/img/happy_new_year_Aruna_Couples_Clinic.png"  class="img-fluid" alt="new_year_Aruna_Couples">
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-12">
                     <!-- <img src="assets/img/galleryimg1.jpeg"  class="img-fluid" alt=""> -->
-                    <img src="assets/img/happy_diwali_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
+                    <img src="assets/img/happy_diwali_Aruna_Couples_Clinic.png"  class="img-fluid" alt="diwali_Aruna_Couples">
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-12">
                     <!-- <img src="assets/img/galleryimg3.jpeg"  class="img-fluid" alt=""> -->
-                    <img src="assets/img/erectile_dysfunctiont_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
+                    <img src="assets/img/erectile_dysfunctiont_Aruna_Couples_Clinic.png"  class="img-fluid" alt="erectile_dysfunctiont">
 
                   </div>
               </div>
@@ -154,12 +154,12 @@
             <div class="row"> 
                 <div class="col-lg-4 col-sm-12 col-md-12">
                   <!-- <img src="assets/img/gallery6.jpg"  class="img-fluid" alt=""> -->
-                  <img src="assets/img/say_no_to_incontinence_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
+                  <img src="assets/img/say_no_to_incontinence_Aruna_Couples_Clinic.png"  class="img-fluid" alt="say_no_to_incontinence">
 
                 </div>
                 <div class="col-lg-4 col-sm-12 col-md-12">
                   <!-- <img src="assets/img/gallery4.jpg"  class="img-fluid" alt=""> -->
-                  <img src="assets/img/galleryimg3.jpeg"  class="img-fluid" alt="">
+                  <img src="assets/img/galleryimg3.jpeg"  class="img-fluid" alt="aruna-couple-clinic">
 
                 </div>
                 <div class="col-lg-4 col-sm-12 col-md-12">
@@ -184,7 +184,7 @@
           <div class="row">
             <!--  FIRSTBLOCK -->
             <div class="col-lg-5  col-sm-6 footer">
-              <img src="assets/img/Group 5 (1).png" alt="">
+              <img src="assets/img/Group 5 (1).png" alt="group">
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row">
                 <div class="col-1">
@@ -289,7 +289,7 @@
   <!--  scroll down menu -->
   <div class="circle-icon-container">
     <div class="circle-icon">
-    <a href="#main_img" class="circle-icon "  ><i class="bi bi-arrow-up-circle-fill"></i></a>
+    <a href="#main_img" class="circle-icon"  ><i class="bi bi-arrow-up-circle-fill"></i></a>
     </div>
     </div>
 
