--- a/male.html
+++ b/male.html
@@ -65,7 +65,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow">
   <a class="navbar-brand ms-2" href="index.html">
-    <img src="assets/img/logo.png" alt="">
+    <img src="assets/img/logo.png" alt="logo">
   </a>
   <span class="slant-shadow">.</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,12 +75,12 @@
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link   ps-5 pe-5" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/menscilinicfinallogo.png" alt="">
+        <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
       </a>
      <span class="slant-shadow">.</span>
       <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
         <div class="d-flex align-items-center">
-          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phone">
           <h5 class="ml-2">&nbsp;+7997990181</h5>
         </div>
       </a>
@@ -113,12 +113,12 @@
   <div class="row">
     <div class="col-4 mt-2"> 
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo.png" alt="" height="60"  width="130">
+        <img src="assets/img/logo.png" alt="logo" height="60"  width="130">
       </a>
     </div>
     <div class="col-4"> 
       <a class="nav-item nav-link" href="male.html" id="navlink2">
-        <img src="assets/img/menscilinicfinallogo.png" alt="" height="60"  width="150">
+        <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic" height="60"  width="150">
       </a>
     </div>
     <div class="col-4"> 
@@ -175,7 +175,7 @@
   <div class="container-fluid mb-5 mt-5">
       <div class="row"> 
           <h3 class="pb-3">MALE  SERVICES</h3>
-              <img src="assets/img/best_male_treatment_service_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
+              <img src="assets/img/best_male_treatment_service_Aruna_Couples_Clinic.png"  class="img-fluid" alt="aruna-couple-clinic">
       </div>
   </div>
 </section>
@@ -190,7 +190,7 @@
         <div class="row"> 
             <h3 class="pb-5">Erectile Dysfunction </h3> 
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_male_treatment_erectile-dysfunction_Aruna_Couples_Clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_male_treatment_erectile-dysfunction_Aruna_Couples_Clinic.png" class="img-fluid" alt="rectile-dysfunction">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                <span>
@@ -229,7 +229,7 @@
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <!-- <img src="assets/img/maleserviceimg2.png" class="img-fluid" alt=""> -->
-                <img src="assets/img/best_male_treatment_Urine_Incontinence_Aruna_Couples_Clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_male_treatment_Urine_Incontinence_Aruna_Couples_Clinic.png" class="img-fluid" alt="Urine_Incontinence">
 
             </div>
         </div>
@@ -245,7 +245,7 @@
         <div class="row"> 
             <h3 class="pb-5">Premature Ejaculation  </h3>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
-                <img src="assets/img/best_Premature_Ejaculation_male_treatment_Aruna_Couples_Clinic.png" class="img-fluid" alt="">
+                <img src="assets/img/best_Premature_Ejaculation_male_treatment_Aruna_Couples_Clinic.png" class="img-fluid" alt="Premature_Ejaculation">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                <span>
@@ -273,7 +273,7 @@
           <div class="row">
             <!--  FIRSTBLOCK -->
             <div class="col-lg-5  col-sm-6 footer">
-              <img src="assets/img/Group 5 (1).png" alt="">
+              <img src="assets/img/Group 5 (1).png" alt="group">
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row">
                 <div class="col-1">
