--- a/privacy.html
+++ b/privacy.html
@@ -45,7 +45,7 @@
 <header> 
   <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow  p-0">
     <a class="navbar-brand ms-5" href="index.html">
-      <img src="assets/img/logo.png" alt="">
+      <img src="assets/img/logo.png" alt="logo">
     </a>
     <span class="slant-shadow">.</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,12 +55,12 @@
       <div class="navbar-nav ml-auto justify-content-between">
         <a class="nav-item nav-link ms-5 ps-5 pe-5" href="male.html" id="navlink2">
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <img src="assets/img/menscilinicfinallogo.png" alt="">
+          <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
         </a>
         <span class="slant-shadow">.</span>
         <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
             <div class="d-flex align-items-center">
-                <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+                <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phone">
                 <h5 class="ml-2">&nbsp;+7997990181</h5>
               </div>
         </a>
@@ -79,7 +79,7 @@
 <!-- Header Small and medium Screen only  -->
 <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow" >
   <a class="navbar-brand" href="index.html">
-    <img src="assets/img/logo.png" alt="">
+    <img src="assets/img/logo.png" alt="logo">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -88,12 +88,12 @@
     <div class="ps-2 ml-auto justify-content-between">
       <a class="nav-item nav-link" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/menscilinicfinallogo.png" alt="">
+        <img src="assets/img/menscilinicfinallogo.png" alt="menscilinic">
 
       </a>
       <a class="nav-item nav-link" href="#" id="navlink2">
         <div class="d-flex align-items-center">
-            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="phone">
             <h5 class="ml-2">&nbsp;+7997990181</h5>
           </div>
       </a>          
@@ -177,7 +177,7 @@
           <div class="row">
             <!--  FIRSTBLOCK -->
             <div class="col-lg-5  col-sm-6 footer">
-              <img src="assets/img/Group 5 (1).png" alt="">
+              <img src="assets/img/Group 5 (1).png" alt="group">
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row">
                 <div class="col-1">
